raw: update 1.20.6 DAY 2
Took 4 hours 54 minutes